--- a/NotiXamarin.Core/NotiXamarin.Core.csproj
+++ b/NotiXamarin.Core/NotiXamarin.Core.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Services\NewsService.cs" />
+    <Compile Include="Services\ValuesService.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
