Implemented selection of elements of list views. Implemented deletion of saved news.

--- a/NotiXamarin/NotiXamarin.csproj
+++ b/NotiXamarin/NotiXamarin.csproj
@@ -80,6 +80,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Adapters\ISelectedChecker.cs" />
     <Compile Include="Adapters\NewsListAdapter.cs" />
     <Compile Include="Fragments\AllNewsListFragment.cs" />
     <Compile Include="Fragments\BaseNewsListFragment.cs" />
@@ -135,6 +136,12 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\values-es\Strings.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\menu\savedNewsActionMenu.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\values\Colors.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
