--- a/NotiXamarin/Properties/AndroidManifest.xml
+++ b/NotiXamarin/Properties/AndroidManifest.xml
@@ -2,5 +2,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="NotiXamarin.NotiXamarin" android:versionCode="1" android:versionName="1.0" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="16" />
 	<uses-permission android:name="android.permission.INTERNET" />
-	<application android:label="NotiXamarin"></application>
+	<application android:label="NotiXamarin" android:icon="@mipmap/ic_launcher"></application>
 </manifest>
